# invenio-banners

./: .editorconfig  .git-blame-ignore-revs  .travis.yml  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: api.rst  conf.py  configuration.rst  index.rst  usage.rst
invenio_banners/: __init__.py  config.py  ext.py  generators.py  permissions.py  proxies.py  utils.py  views.py
invenio_banners/administration/: __init__.py  banners.py
invenio_banners/alembic/: 3bfaeb3d8eff_change_datetime_types.py  5e02314da32e_create_invenio_banners_db_table.py  e40d93d99040_create_invenio_banners_branch.py
invenio_banners/records/: __init__.py  models.py
invenio_banners/resources/: __init__.py  config.py  errors.py  resource.py
invenio_banners/services/: __init__.py  config.py  permissions.py  results.py  schemas.py  service.py
invenio_banners/templates/semantic-ui/invenio_banners/: banner.html
invenio_banners/translations/: messages.pot
invenio_banners/translations/zh-Hant/LC_MESSAGES/: messages.po
tests/: conftest.py  test_alembic.py  test_invenio_banners.py  test_macro.py
tests/records/: test_disable.py  test_models.py
tests/resources/: conftest.py  test_resources.py
tests/services/: conftest.py  test_services.py
tests/ui/: conftest.py  test_i18n_administration.py
