# SPDX-FileCopyrightText: 2020-2024 CERN.
# SPDX-FileCopyrightText: 2023-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2025 KTH Royal Institute of Technology.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-banners"
description = "Invenio-Banners is a module used to create and show banners with useful messages to users."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "Banners",
  "Invenio",
]
classifiers = [
  "Development Status :: 1 - Planning",
]
dependencies = [
  "invenio-administration>=7.0.0,<8.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
  "invenio-records-resources>=11.0.0,<12.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-banners"

[project.entry-points."invenio_administration.views"]
invenio_banners_create = "invenio_banners.administration.banners:BannerCreateView"
invenio_banners_details = "invenio_banners.administration.banners:BannerDetailView"
invenio_banners_edit = "invenio_banners.administration.banners:BannerEditView"
invenio_banners_list = "invenio_banners.administration.banners:BannerListView"

[project.entry-points."invenio_base.api_apps"]
invenio_banners = "invenio_banners:InvenioBanners"

[project.entry-points."invenio_base.api_blueprints"]
invenio_banners = "invenio_banners.views:create_banners_api_bp"

[project.entry-points."invenio_base.apps"]
invenio_banners = "invenio_banners:InvenioBanners"

[project.entry-points."invenio_db.alembic"]
invenio_banners = "invenio_banners:alembic"

[project.entry-points."invenio_db.models"]
invenio_banners = "invenio_banners.records.models"

[project.entry-points."invenio_i18n.translations"]
invenio_banners = "invenio_banners"

[project.optional-dependencies]
opensearch1 = [
  "invenio-search[opensearch1]>=3.0.0,<4.0.0",
]
opensearch2 = [
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
]
tests = [
  "invenio-app>=3.0.0,<4.0.0",
  "jsonresolver>=0.5",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_banners/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_banners/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_banners/translations/messages.pot"
output_dir = "invenio_banners/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_banners/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_banners",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_banners --cov-report=term-missing'
testpaths = "tests invenio_banners"
live_server_scope = "module"

# UV needs to be told explicitly which extras are conflicting:
# https://docs.astral.sh/uv/concepts/projects/config/#conflicting-dependencies
[tool.uv]
conflicts = [
  [
    { extra = "opensearch1" },
    { extra = "opensearch2" },
    { extra = "elasticsearch7" },
  ]
]
